--- a/OpenGL_tutorial/OpenGL_tutorial/OpenGL_tutorial.vcxproj.filters
+++ b/OpenGL_tutorial/OpenGL_tutorial/OpenGL_tutorial.vcxproj.filters
@@ -21,5 +21,21 @@
     <ClCompile Include="..\..\..\..\..\Downloads\glad\src\glad.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Shader.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Shader.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shader.vs">
+      <Filter>리소스 파일</Filter>
+    </None>
+    <None Include="shader.fs">
+      <Filter>리소스 파일</Filter>
+    </None>
   </ItemGroup>
 </Project>
