--- a/OpenGL_tutorial/OpenGL_tutorial/OpenGL_tutorial.vcxproj.filters
+++ b/OpenGL_tutorial/OpenGL_tutorial/OpenGL_tutorial.vcxproj.filters
@@ -29,13 +29,21 @@
     <ClInclude Include="Shader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shader.vs">
+    <None Include="shader.vert">
       <Filter>리소스 파일</Filter>
     </None>
-    <None Include="shader.fs">
+    <None Include="shader.frag">
       <Filter>리소스 파일</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="container.jpg">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
