--- a/OpenGL_tutorial/OpenGL_tutorial/OpenGL_tutorial.vcxproj.filters
+++ b/OpenGL_tutorial/OpenGL_tutorial/OpenGL_tutorial.vcxproj.filters
@@ -45,5 +45,8 @@
     <Image Include="container.jpg">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="awesomeface.png">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
